// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal render current user is not admin and global manager render snap when visible is true - no edit button 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div>
                  <div
                    aria-busy="true"
                    aria-live="polite"
                    class="ant-spin ant-spin-spinning"
                  >
                    <span
                      class="ant-spin-dot ant-spin-dot-spin"
                    >
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="ant-spin-container ant-spin-blur"
                >
                  <div
                    class="ant-empty ant-empty-normal"
                  >
                    <div
                      class="ant-empty-image"
                    >
                      <svg
                        height="41"
                        viewBox="0 0 64 41"
                        width="64"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          transform="translate(0 1)"
                        >
                          <ellipse
                            cx="32"
                            cy="33"
                            fill="#f5f5f5"
                            rx="32"
                            ry="7"
                          />
                          <g
                            fill-rule="nonzero"
                            stroke="#d9d9d9"
                          >
                            <path
                              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                            />
                            <path
                              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                              fill="#fafafa"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="ant-empty-description"
                    >
                      暂无公告信息
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                />
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal render current user is not admin and global manager render snap when visible is true - no edit button 2`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-space ant-space-vertical company-notice-view-space"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <span
                        class="pre-warp-break-all"
                      >
                        notice
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        class="ant-typography ant-typography-secondary company-notice-effective-period"
                      >
                        有效期
                        : 
                        2026-01-01 08:00:00
                         ~ 
                        2027-01-01 07:59:59
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                />
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal render snap when edit notice click cancel btn with dirty data and confirm to cancel 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <form
                    class="ant-form ant-form-vertical"
                  >
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class="ant-form-item-required"
                            for="notice_str"
                            title="公告内容"
                          >
                            公告内容
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <textarea
                                aria-required="true"
                                class="ant-input ant-input-status-success basic-input-wrapper css-1pd1cd5"
                                id="notice_str"
                                placeholder="请输入公告内容"
                                style="resize: none; height: -150px; min-height: -6px; max-height: -150px;"
                              >
                                notice
                              </textarea>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class="ant-form-item-required"
                            for="validPeriod"
                            title="有效时间范围"
                          >
                            有效时间范围
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="css-1y8q0oh"
                              >
                                <div
                                  aria-required="true"
                                  class="ant-picker ant-picker-range ant-picker-status-success basic-range-picker-wrapper company-notice-date-picker css-w7y1zu"
                                >
                                  <div
                                    class="ant-picker-input ant-picker-input-active"
                                  >
                                    <input
                                      autocomplete="off"
                                      id="validPeriod"
                                      placeholder="请选择开始时间"
                                      readonly=""
                                      size="21"
                                      value="2026-01-01 08:00:00"
                                    />
                                  </div>
                                  <div
                                    class="ant-picker-range-separator"
                                  >
                                    <svg
                                      fill="currentColor"
                                      height="14"
                                      viewBox="0 0 14 14"
                                      width="14"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                                        fill="#C3C6CD"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="ant-picker-input"
                                  >
                                    <input
                                      autocomplete="off"
                                      placeholder="请选择结束时间"
                                      readonly=""
                                      size="21"
                                      value="2027-01-01 07:59:59"
                                    />
                                  </div>
                                  <div
                                    class="ant-picker-active-bar"
                                    style="left: 0px; width: 0px; position: absolute;"
                                  />
                                  <span
                                    class="ant-picker-clear"
                                  >
                                    <svg
                                      fill="currentColor"
                                      height="16"
                                      viewBox="0 0 14 14"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default ant-popover-open basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      取 消
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-popover ant-popconfirm ant-popover-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
    >
      <div
        class="ant-popover-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      />
      <div
        class="ant-popover-content"
      >
        <div
          class="ant-popover-inner"
          role="tooltip"
        >
          <div
            class="ant-popover-inner-content"
          >
            <div
              class="ant-popconfirm-inner-content"
            >
              <div
                class="ant-popconfirm-message"
              >
                <span
                  class="ant-popconfirm-message-icon"
                >
                  <span
                    aria-label="exclamation-circle"
                    class="anticon anticon-exclamation-circle"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="exclamation-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                      />
                    </svg>
                  </span>
                </span>
                <div
                  class="ant-popconfirm-message-text"
                >
                  <div
                    class="ant-popconfirm-title"
                  >
                    当前内容已经发生更改，是否确认取消修改？
                  </div>
                </div>
              </div>
              <div
                class="ant-popconfirm-buttons"
              >
                <button
                  class="ant-btn ant-btn-default ant-btn-sm"
                  type="button"
                >
                  <span>
                    取 消
                  </span>
                </button>
                <button
                  class="ant-btn ant-btn-primary ant-btn-sm"
                  type="button"
                >
                  <span>
                    确 认
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal render snap when edit notice click cancel btn without dirty data 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-space ant-space-vertical company-notice-view-space"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <span
                        class="pre-warp-break-all"
                      >
                        notice
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        class="ant-typography ant-typography-secondary company-notice-effective-period"
                      >
                        有效期
                        : 
                        2026-01-01 08:00:00
                         ~ 
                        2027-01-01 07:59:59
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      编 辑
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
</body>
`;

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal render snap when edit notice click submit btn with valid content and time range 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px; transform-origin: NaNpx NaNpx;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <form
                    class="ant-form ant-form-vertical"
                  >
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class="ant-form-item-required"
                            for="notice_str"
                            title="公告内容"
                          >
                            公告内容
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <textarea
                                aria-required="true"
                                class="ant-input ant-input-status-success basic-input-wrapper css-1pd1cd5"
                                id="notice_str"
                                placeholder="请输入公告内容"
                                style="resize: none; height: -150px; min-height: -6px; max-height: -150px;"
                              >
                                notice
                              </textarea>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-label"
                        >
                          <label
                            class="ant-form-item-required"
                            for="validPeriod"
                            title="有效时间范围"
                          >
                            有效时间范围
                          </label>
                        </div>
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="css-1y8q0oh"
                              >
                                <div
                                  aria-required="true"
                                  class="ant-picker ant-picker-range ant-picker-status-success basic-range-picker-wrapper company-notice-date-picker css-w7y1zu"
                                >
                                  <div
                                    class="ant-picker-input ant-picker-input-active"
                                  >
                                    <input
                                      autocomplete="off"
                                      id="validPeriod"
                                      placeholder="请选择开始时间"
                                      readonly=""
                                      size="21"
                                      value="2026-01-01 08:00:00"
                                    />
                                  </div>
                                  <div
                                    class="ant-picker-range-separator"
                                  >
                                    <svg
                                      fill="currentColor"
                                      height="14"
                                      viewBox="0 0 14 14"
                                      width="14"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M7.684 7 4.796 4.112l.825-.824L9.334 7 5.62 10.712l-.825-.825z"
                                        fill="#C3C6CD"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="ant-picker-input"
                                  >
                                    <input
                                      autocomplete="off"
                                      placeholder="请选择结束时间"
                                      readonly=""
                                      size="21"
                                      value="2027-01-01 07:59:59"
                                    />
                                  </div>
                                  <div
                                    class="ant-picker-active-bar"
                                    style="left: 0px; width: 0px; position: absolute;"
                                  />
                                  <span
                                    class="ant-picker-clear"
                                  >
                                    <svg
                                      fill="currentColor"
                                      height="16"
                                      viewBox="0 0 14 14"
                                      width="16"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      取 消
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal render snap when visible is true 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div>
                  <div
                    aria-busy="true"
                    aria-live="polite"
                    class="ant-spin ant-spin-spinning"
                  >
                    <span
                      class="ant-spin-dot ant-spin-dot-spin"
                    >
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                      <i
                        class="ant-spin-dot-item"
                      />
                    </span>
                  </div>
                </div>
                <div
                  class="ant-spin-container ant-spin-blur"
                >
                  <div
                    class="ant-empty ant-empty-normal"
                  >
                    <div
                      class="ant-empty-image"
                    >
                      <svg
                        height="41"
                        viewBox="0 0 64 41"
                        width="64"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          transform="translate(0 1)"
                        >
                          <ellipse
                            cx="32"
                            cy="33"
                            fill="#f5f5f5"
                            rx="32"
                            ry="7"
                          />
                          <g
                            fill-rule="nonzero"
                            stroke="#d9d9d9"
                          >
                            <path
                              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                            />
                            <path
                              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                              fill="#fafafa"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="ant-empty-description"
                    >
                      暂无公告信息
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      编 辑
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal render snap when visible is true 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-space ant-space-vertical company-notice-view-space"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <span
                        class="pre-warp-break-all"
                      >
                        notice
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        class="ant-typography ant-typography-secondary company-notice-effective-period"
                      >
                        有效期
                        : 
                        2026-01-01 08:00:00
                         ~ 
                        2027-01-01 07:59:59
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      编 辑
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`base/page/Nav/SideMenu/UserMenu/CompanyNoticeModal should display notice content and effective period in view mode 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal company-notice-modal basic-modal-wrapper css-9ei8gy"
          role="dialog"
          style="width: 720px;"
        >
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
          <div
            class="ant-modal-content"
          >
            <button
              aria-label="Close"
              class="ant-modal-close"
              type="button"
            >
              <span
                class="ant-modal-close-x"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 14 14"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                  />
                </svg>
              </span>
            </button>
            <div
              class="ant-modal-header"
            >
              <div
                class="ant-modal-title"
                id="test-id"
              >
                系统公告
              </div>
            </div>
            <div
              class="ant-modal-body"
            >
              <div
                class="ant-spin-nested-loading"
              >
                <div
                  class="ant-spin-container"
                >
                  <div
                    class="ant-space ant-space-vertical company-notice-view-space"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-bottom: 8px;"
                    >
                      <span
                        class="pre-warp-break-all"
                      >
                        notice
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        class="ant-typography ant-typography-secondary company-notice-effective-period"
                      >
                        有效期
                        : 
                        2026-01-01 08:00:00
                         ~ 
                        2027-01-01 07:59:59
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-modal-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      编 辑
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
